# Rust-HiRAG

./: .env.example  CHANGELOG.md  COMPLETE_E2E_TEST_REPORT.md  Cargo.toml  Dockerfile  E2E_TEST_RESULTS.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_VERIFICATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  POST_AUDIT_FIXES.md  PRODUCTION.md  PRODUCTION_IMPROVEMENTS.md  PRODUCTION_READY_SUMMARY.md  README.md  SECURITY.md  TESTING_SUMMARY.md  config.example.toml  config.toml  docker-compose.yml  e2e_manual_test.py  e2e_test.py  integration_test.py  qdrant_config.yaml  test_components.py  test_embedding.py
.github/workflows/: ci.yml
examples/: basic_usage.rs  protocol_example.rs
src/: lib.rs  server.rs  shutdown.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: loader.rs  mod.rs  validation.rs
src/embedding/: cache.rs  client.rs  client_v2.rs  mod.rs  models.rs
src/error/: mod.rs
src/hirag/: background.rs  manager.rs  manager_v2.rs  mod.rs  models.rs  ranker.rs  retriever.rs  token_estimator.rs
src/middleware/: auth.rs  body_limit.rs  mod.rs  rate_limiter.rs  validator.rs
src/observability/: health.rs  metrics.rs  mod.rs
src/protocol/: auth.rs  codec.rs  handler.rs  messages.rs  mod.rs
src/vector_db/: circuit_breaker.rs  client.rs  mod.rs  models.rs  search.rs
storage/: raft_state.json
storage/collections/contexts_immediate/0/: newest_clocks.json
storage/collections/contexts_longterm/0/: newest_clocks.json
storage/collections/contexts_shortterm/0/: newest_clocks.json
tests/: integration_test.rs
(+178 files in other folders)
